# coding_challenge

./: .gitignore  .prettierrc  Cargo.toml  README.md  default.nix  flake.nix  shell.nix
.cargo/: mutants.toml
.github/workflows/: ci.yml
benches/: checksum_bench.rs  parse_bench.rs
src/: cli.rs  json_formatter.rs  lib.rs  main.rs  ops.rs  ops_checksum.rs  ops_parse.rs  runner.rs  traits.rs  utils.rs
src/arguments/: checksum.rs  mod.rs  parse.rs
src/commands/: checksum.rs  mod.rs  parse.rs
test-data-gen/: .prettierrc  Cargo.toml
test-data-gen/src/: main.rs
tests/: e2e_base.rs  e2e_commands.rs  e2e_multi_file.rs  e2e_prettier_compatibility.rs  e2e_unix_compatibility.rs
