[package]
name = "my_app"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.0"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
hex = "0.4.3"
serde_json = "1.0.149"
sha2 = "0.10.9"

[dev-dependencies]
rand = "0.10.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parse_bench"
harness = false

[workspace]
members = ["test-data-gen"]
default-members = ["."]
