[package]
name = "my_app"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.1"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
clap_complete = "4.5.66"
clap_mangen = "0.2.31"
hex = "0.4.3"
serde-transcode = "1.1.1"
serde_json = "1.0.149"
sha2 = "0.10.9"

[dev-dependencies]
rand = "0.10.0"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "parse_bench"
harness = false

[[bench]]
name = "checksum_bench"
harness = false

[workspace]
members = ["test-data-gen"]
default-members = ["."]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3
